cmake_minimum_required(VERSION 3.22)
project(ex1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ex1
        AVLTree.h
        Country.cpp
        Contestant.h
        Contestant.cpp
        Country.h
        Country.cpp
        Team.h
        Team.cpp
        Exception.h
        maina1.cpp
        Olympicsa1.h
        Olympicsa1.cpp
        wet1util.h
        )
